fix dot grid color on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,6 @@ body {
 
 @media (prefers-color-scheme: dark) {
   .bg-dot-grid {
-    background-image: radial-gradient(rgb(65, 65, 65) 1px, transparent 0);
+    background-image: radial-gradient(rgb(32, 32, 32) 1px, transparent 0);
   }
 }
